--- a/index.html
+++ b/index.html
@@ -195,14 +195,14 @@
                         <i class="fas fa-envelope"></i>
                         <div>
                             <h3>Email</h3>
-                            <p>krishna.acharya@email.com</p>
+                            <p>krish9805273139@gmail.com</p>
                         </div>
                     </div>
                     <div class="contact-item">
                         <i class="fas fa-phone"></i>
                         <div>
                             <h3>Phone</h3>
-                            <p>+977 1234567890</p>
+                            <p>+977 9866329237</p>
                         </div>
                     </div>
                     <div class="contact-item">
